--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ header {
     width: 611px;
     height: 16px;
     margin-top: 79px;
-    /* margin-left: 399px; */
 
 }
 
@@ -124,13 +123,13 @@ h2 {
     margin: auto;
     padding-top: 57px;
     position: relative;
+    padding-bottom: 5%;
 }
 
 .conteiner-video-youtube-button {
-    position: relative;
-    right: -650px;
-    top: -350px;
-    width: 100px;
+    position: absolute;
+    top: 40%;
+    right: 45%;
 
 }
 
@@ -159,23 +158,118 @@ h2 {
     color: #fff;
 
 }
-@media (max-width: 375px) {
-    body {
-        max-width: 90%;
-    
+@media (max-width: 1200px) {
+    .header {
+        height: 40%;
+        padding-left: 2%;
     }
-    header {
-        width: 290%;
-        padding: 10%;
+    nav {
+        width: 90%;
+        margin-left: 10%;
     }
+       
     .conteiner-menu {
-        margin: 0%;
+        margin-top: 5%;
+        width: 90%;
+        font-size: 90%;
+       
+    }
+    .menu-list {
+        justify-content: center;
+        gap: 5%;
+        font-weight: bold;
+
+    }
+    .section-header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100% ;
+    }
+    h1 {
+       font-size: 3em;
+       text-align: center;
+       
+    }
+     .parag-header {
+        font-size: 1em;
+        text-align: center;
+    }
+    button {
+        width: 30%;
+        height: 20%;
+       
     }
 
+    .conteiner-main {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 80%;
+      margin-left: 10%;
+      margin-right: 15%;
+    }
+
+    .parag-main {
+        width: 80%;
+    }
+    div.conteiner-main-list {
+        flex-wrap: wrap;
+        width: 100%;
+        column-gap: 20%;
+        padding-top: 5%;
+        padding-bottom: 5%;
+        
+    }
+    .conteiner-video-youtube {
+        margin-left: 15%;
+        height: 100%;
+    }
+    div.conteiner-video-youtube img {
+        width: 80%;
+        height: 80%;
+    }
+    div.conteiner-video-youtube-button {
+        right: 53%;
+        top: 45%
+    }
+
+    div.conteiner-video-youtube-button img {
+        width: 50%;
+      
+    }
+    .conteiner-footer {
+        padding-left: 15%;
+    }
+
+}
+@media (max-width: 768px) {
+    div.conteiner-main-list {
+      column-gap: 10%;
+    }
+    div.conteiner-main-list img {
+       width: 18%;
+       
+    }
+     div.conteiner-video-youtube-button {
+        right: 48%;
+        top: 47%
+    }
+
+    div.conteiner-video-youtube-button img {
+        width: 40%;
+      
+    }
+
+
+}
+
+
+@media (max-width: 375px) {
+   
     .menu-list {
         flex-direction: column;
-        width: 100%;
-        font-size: 70%;
+        font-size: 100%;
        
        
     }
@@ -184,57 +278,55 @@ h2 {
         list-style: square;
 
     }
-    .conteiner-menu {
-        width: 50%;
+   
+    h1 {
+       font-size: 2em;
        
     }
-    h1 {
-       font-size: 180%;
-       width: 35%;
-       text-align: center; 
-       padding-top: 20%; 
-        
-    }
-   
-    .parag-header {
-        font-size: 70%;
-        width: 30%;
-        text-align: center;
+    p.parag-header {
+        width: 80%;
     }
     button {
-        width: 20%;
-        font-size: 90%;
-        margin: 5%;
+        width: 40%;
+        height: 20%;
+        font-size: 80%;
     }
-    .conteiner-main {
-        width: 130%;
-        margin: 5%;
+    div.conteiner-main {
+        margin-bottom: 5%;
+    }
+    div.conteiner-main-list img {
+        width: 30%;
 
     }
-    h2 {
-        font-size: 150%;
-           
-     }
-    .parag-main {
-    font-size: 13px;
-    text-align: center;
-    padding: 5%;
+    div.conteiner-video-youtube {
+        margin-left: 10%;
+    }
+    div.conteiner-video-youtube img {
+        width: 90%;
         
     }
-    .conteiner-main-list {
-     flex-wrap: wrap;
-      width: 135%;
-        
+    div.conteiner-video-youtube-button {
+        right: 31%;
+        top: 51%;
+    }
+    div.conteiner-video-youtube-button img {
+        width: 30%;
        
     }
     .conteiner-footer {
-        padding-left: 10%;
-        width: 250%;
-      
+        height: 50%;
+        
     }
-    .conteiner-footer-parag,
-    .conteiner-footer-parag-text {
-        font-size: 80%;  
+    div.conteiner-footer p {
+        font-size: 80%;
     }
-   
+    p.conteiner-footer-parag {
+        padding-top: 10%;
+    }
+     p.conteiner-footer-parag-text {
+        padding-bottom: 5%;
+
+     }
+
+     
 }
